--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "7.1.1",
-    "@typescript-eslint/parser": "7.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-react": "4.2.1",
     "autoprefixer": "^10.4.18",
     "dotenv": "^16.4.5",
@@ -50,7 +50,7 @@
     "supabase": "^1.200.3",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.6.3",
     "vite": "^5.4.14",
     "vite-plugin-pwa": "^0.19.8",
     "workbox-window": "^7.3.0"
